# pypi-user-agent

./: README.rst  noxfile.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/pypi_user_agent/: __init__.py  _compat.py  _glibc.py
tests/: test_basic.py
